syntax="proto3";
package services;
import "google/api/annotations.proto";

enum ProdArea{
  A=0;
  B=1;
  C=2;
}

message ProdRequest{
  int32 prod_id=1;
  ProdArea prod_area=2;
}

message ProdResponse{
  int32 prod_stock=1;
}

message QuerySize{
  int32 size=1;
}

message ProdResponseList{
    repeated ProdResponse prod_list=1;
}

service ProdService {
  rpc GetProdStock (ProdRequest) returns (ProdResponse){
      option (google.api.http) = {
          get: "/v1/prod/{prod_id}"
      };
  };

  rpc GetProdStocks(QuerySize) returns (ProdResponseList){
      option (google.api.http) = {
          get: "/v1/prod/list/{size}"
      };
  }
}